--- a/package.json
+++ b/package.json
@@ -28,13 +28,12 @@
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.26.12",
     "eslint": "^7.9.0",
+    "eslint-watch": "^7.0.0",
     "html-validate": "^3.2.0",
     "mkdirp": "^1.0.4",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.0.2"
   },
-  "dependencies": {
-    "eslint-watch": "^7.0.0"
-  }
+  "dependencies": {}
 }
