--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "watch": "npm-run-all build:* build-dev -p watch:*",
     "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\" \"js/*.js\"",
     "watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev",
-    "watch:eslint": "eslint-watch --watch --changed --clear"
+    "watch:eslint": "esw --watch --changed --clear"
   },
   "keywords": [],
   "author": "",
