--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,32 +1,34 @@
 {
   "env": {
-      "browser": true,
-      "es6": true
+    "browser": true,
+    "es6": true
   },
   "extends": "eslint:recommended",
   "parserOptions": {
-      "ecmaVersion": 2015
+    "ecmaVersion": 2015
   },
   "rules": {
-      "indent": [
-          "error",
-          2
-      ],
-      "linebreak-style": [
-          "off"
-      ],
-      "quotes": [
-          "error",
-          "single",
-          {"allowTemplateLiterals": true}
-      ],
-      "semi": [
-          "error",
-          "always"
-      ],
-      "no-console": [
-          "off"
-      ],
-      "no-inner-declarations": 0
+    "indent": [
+      "error",
+      2
+    ],
+    "linebreak-style": [
+      "off"
+    ],
+    "quotes": [
+      "error",
+      "single",
+      {
+        "allowTemplateLiterals": true
+      }
+    ],
+    "semi": [
+      "error",
+      "always"
+    ],
+    "no-console": [
+      "off"
+    ],
+    "no-inner-declarations": 0
   }
 }
